# portless

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  help.md  welcome.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/about/: acknowledgements.md  author.md  license.md
docs/src/getting-started/: installation.md  quick-start.md  why-portless.md
docs/src/ops/: contributor-guide.md  development-guide.md  releases.md  security-guide.md
docs/src/reference/: api.md  architecture.md  cli.md  config.md
docs/src/user-guide/: alias.md  clean.md  commands.md  configuration.md  custom-tld.md  env-vars.md  get.md  hosts.md  https.md  lan.md  list.md  monorepo.md  named.md  portless-json.md  proxy.md  prune.md  run.md  service.md  subdomains.md  tailscale.md  trust.md  wildcard.md  worktrees.md  zero-arg-mode.md
docs/theme/: adsense.js  analytics.js  custom.css  head.hbs
scripts/: install.bat  install.ps1  install.sh
src/: lib.rs  main.rs  trust.rs
src/cli/: commands.rs  mod.rs  opts.rs
src/common/: error.rs  fs.rs  mod.rs  net.rs  report.rs  types.rs
src/config/: env.rs  mod.rs  portless_json.rs
src/dashboard/: api.rs  html.rs  mod.rs  server.rs
src/discovery/: framework.rs  mod.rs  monorepo.rs  package_manager.rs  project.rs
src/hosts/: mod.rs
src/metrics/: mod.rs
src/platform/: mod.rs  paths.rs  privilege.rs  system.rs
src/process/: child.rs  kill.rs  logs.rs  mod.rs  spawn.rs
src/proxy/: acceptor.rs  handler.rs  mod.rs  server.rs  upstream.rs
src/routing/: hostname.rs  match_.rs  mod.rs  tld.rs
src/service/: launchd.rs  mod.rs  systemd.rs  task_scheduler.rs
src/state/: mod.rs  proxy_state.rs  registry.rs
src/tailscale/: mod.rs
src/tls/: ca.rs  cert.rs  loader.rs  mod.rs  store.rs
src/worktree/: mod.rs
