[package]
name = "portless"
version = "0.0.0"
edition = "2024"
description = "Rust-native local development platform that replaces localhost port numbers with stable HTTPS hostnames"
license = "Apache-2.0"
authors = ["Muhammad Fiaz <contact@muhammadfiaz.com>"]
repository = "https://github.com/muhammad-fiaz/portless"
homepage = "https://muhammad-fiaz.github.io/portless"
documentation = "https://docs.rs/portless"
readme = "README.md"
keywords = ["localhost", "proxy", "https", "tls", "development"]
categories = [
    "command-line-utilities",
    "development-tools",
    "network-programming",
    "web-programming",
]
exclude = [".github/", "scripts/", "docs/"]

[lib]
name = "portless"
path = "src/lib.rs"

[[bin]]
name = "portless"
path = "src/main.rs"

[features]
default = ["tls-rustls", "http2"]
tls-rustls = ["dep:rustls", "dep:rustls-pemfile", "dep:rustls-pki-types"]
http2 = ["dep:h2"]
http3 = ["dep:quinn", "dep:quinn-proto"]
quic = ["dep:quinn"]
mdns = ["dep:libmdns"]
tailscale = []
dashboard = ["dep:actix-web"]
full = ["http2", "http3", "quic", "mdns", "dashboard", "tailscale"]

[dependencies]
tokio = { version = "1.52", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"

actix-web = { version = "4.13", optional = true }
actix-rt = "2.11"
awc = { version = "3.8", features = ["rustls-0_23"] }
hyper = { version = "1.10", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http = "1.4"
http-body-util = "0.1"
bytes = "1.11"
tower = "0.5"
tower-service = "0.3"

rustls = { version = "0.23", optional = true }
rustls-pemfile = { version = "2.2", optional = true }
rustls-pki-types = { version = "1.14", optional = true }
tokio-rustls = "0.26"
rcgen = { version = "0.14", features = ["pem", "x509-parser"] }

h2 = { version = "0.4", optional = true }

quinn = { version = "0.11", optional = true }
quinn-proto = { version = "0.11", optional = true }

clap = { version = "4.6", features = ["derive", "env", "string"] }
clap_complete = "4.6"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"
serde_yaml = "0.9"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-actix-web = "0.7"

anyhow = "1.0"
thiserror = "2.0"

dashmap = "6.2"
parking_lot = "0.12"
arc-swap = "1.9"

socket2 = { version = "0.6", features = ["all"] }

libmdns = { version = "0.10", optional = true }
hickory-resolver = "0.26"

notify = "8.2"
notify-debouncer-mini = "0.7"

sysinfo = "0.39"

chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
uuid = { version = "1.23", features = ["v4", "serde"] }
sha2 = "0.11"
base64 = "0.22"
url = "2.5"
percent-encoding = "2.3"
once_cell = "1.21"
regex = "1.12"
dirs = "6.0"
which = "8.0"
walkdir = "2.5"
is-terminal = "0.4"
tempfile = "3.27"
hostname = "0.4"
local-ip-address = "0.6"
indexmap = { version = "2.14", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.52", features = ["full", "test-util", "macros"] }
proptest = "1.11"
mockito = "1.7"
assert_matches = "1.5"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
debug = false
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
incremental = true
